calibre/calibre-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: calibre-ingress-route
  namespace: calibre
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`calibre.pindaroli.org`)
      kind: Rule
      services:
        - name: calibre
          port: 8080
      middlewares:
        - name: oauth2-auth
  tls:
    secretName: pindaroli-wildcard-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth2-auth
  namespace: calibre
spec:
  forwardAuth:
    address: http://oauth2-proxy.oauth2-proxy.svc.cluster.local:4180
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
      - X-Auth-Request-Groups
      - X-Auth-Request-Preferred-Username
    trustForwardHeader: true
