calibre/calibre-web-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: calibre-web-ingress-route
  namespace: calibre
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`calibre-web.pindaroli.org`)
      kind: Rule
      services:
        - name: calibre-web
          port: 8083
      middlewares:
        - name: oauth2-auth
          namespace: oauth2-proxy
  tls:
    secretName: pindaroli-wildcard-tls
